# Fed-ML-Chem

./: .gitignore  README.md  pyproject.toml
docs/: configuration_system.md  simple_python_config.md
documentation/: Standard_CentralNN_DNA+MRI.md  TFF_FedNN_PILL.md
examples/: RSNA_centralized.py  central_training_example.py  centralized_dna_custom_load_example.py  centralized_dna_example.py  centralized_dna_mri_example.py  centralized_kidney_ct_example.py  centralized_pill_example.py  e_dna_gpu2.e12185795  e_dna_gpu2.e12187230  federated_dna_example.py  federated_learning_example.py  federated_pill_example.py  gpujob.sh  o_dna_gpu2.o12185795  o_dna_gpu2.o12187003  o_dna_gpu2.o12187073  o_dna_gpu2.o12187134  o_dna_gpu2.o12187163  o_dna_gpu2.o12187230  quantum_federated_dna_example.py  quantum_federated_hiv_example.py  quantum_federated_pill_example.py  quantum_federated_pill_example_fixed.py  quantum_training_example.py
examples/FHE federated/: fhe_federated_cifar_example.py
examples/QNN FHE federated/: quantum_fhe_federated_cifar_example.py  quantum_fhe_federated_mri_example.py
examples/QNN federated/: quantum_federated_dna_example.py  quantum_federated_dna_mri_example.py
examples/QNN_federated/: quantum_federated_dna_example.py  quantum_federated_hiv_example.py  quantum_federated_pill_example.py  quantum_federated_pill_example_fixed.py
examples/centralized/: centralized_dna_custom_load_example.py  centralized_dna_example.py  centralized_dna_mri_example.py  centralized_pill_example.py
examples/federated/: federated_dna_example.py  federated_dna_mri_example.py  federated_pill_example.py
examples/wandb/: latest-run
examples/wandb/run-20250702_170145-xc9wjfpk/: run-xc9wjfpk.wandb
examples/wandb/run-20250702_170145-xc9wjfpk/files/: requirements.txt  wandb-metadata.json
examples/wandb/run-20250702_171450-6dpbhhmz/: run-6dpbhhmz.wandb
examples/wandb/run-20250702_171450-6dpbhhmz/files/: wandb-metadata.json
examples/wandb/run-20250702_172649-ba60ryqm/: run-ba60ryqm.wandb
examples/wandb/run-20250702_172649-ba60ryqm/files/: config.yaml  wandb-metadata.json
examples/wandb/run-20250702_173851-388xjm7p/: run-388xjm7p.wandb
examples/wandb/run-20250702_173851-388xjm7p/files/: wandb-metadata.json
examples/wandb/run-20250702_202256-kvi7ymit/: run-kvi7ymit.wandb
examples/wandb/run-20250702_202256-kvi7ymit/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
examples/wandb/run-20250702_202553-w719irgg/: run-w719irgg.wandb
examples/wandb/run-20250702_202553-w719irgg/files/: config.yaml  wandb-metadata.json  wandb-summary.json
fed_ml_lib/: README.md  __init__.py  cli.py  client.py  config.py  datasets.py  engine.py  models.py  server.py  utils.py
fed_ml_lib.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
fed_ml_lib/centralized/: __init__.py  utils.py
fed_ml_lib/config/: __init__.py  python_config.py
fed_ml_lib/core/: __init__.py  testing.py  training.py  utils.py  visualization.py
fed_ml_lib/data/: __init__.py  loaders.py  partitioning.py  setup.py
fed_ml_lib/federated/: __init__.py  client.py  server.py  strategies.py  utils.py
fed_ml_lib/models/: __init__.py  base.py  modular.py
legacy/: run-gpu.sh
legacy/redundant/: classical.py  encrypted.py  hybrid.py
src/: Standard_FedQNN_DNA.ipynb
